--- a/image rag-genai/Dockerfile
+++ b/image rag-genai/Dockerfile
@@ -1,56 +1,30 @@
+# Use an official Python runtime as a parent image
 FROM python:3.10-slim
 
-# Set the working directory
+# Install dependencies
+RUN apt-get update && apt-get install -y \
+    unzip \
+    curl \
+    wget \
+    chromium-driver \
+    chromium \
+    && rm -rf /var/lib/apt/lists/*
+
+# Set environment variables for Chrome and Selenium
+ENV CHROME_BIN=/usr/bin/chromium
+ENV CHROME_DRIVER=/usr/bin/chromedriver
+
+# Set the working directory in the container
 WORKDIR /app
 
-# Copy requirements file and install dependencies
-COPY requirements.txt .
+# Copy the current directory contents into the container at /app
+COPY . /app
 
-# Install required Python packages
+# Install Python dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Install dependencies for Chrome and ChromeDriver
-RUN apt-get update && apt-get install -y \
-    wget \
-    curl \
-    unzip \
-    gnupg2 \
-    libnss3 \
-    libx11-6 \
-    libx11-xcb1 \
-    libxcomposite1 \
-    libxcursor1 \
-    libxdamage1 \
-    libxi6 \
-    libxtst6 \
-    libglib2.0-0 \
-    libxrandr2 \
-    libxfixes3 \
-    libpangocairo-1.0-0 \
-    libpangoft2-1.0-0 \
-    libfontconfig1 \
-    libatk1.0-0 \
-    libatk-bridge2.0-0 \
-    libcups2 \
-    libgbm1 \
-    libgtk-3-0 \
-    libasound2 \
-    xdg-utils \
-    && wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add - \
-    && sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google-chrome.list' \
-    && apt-get update && apt-get install -y google-chrome-stable
-
-# Install ChromeDriver
-RUN wget -N https://chromedriver.storage.googleapis.com/$(curl -s https://chromedriver.storage.googleapis.com/LATEST_RELEASE)/chromedriver_linux64.zip -P /tmp/ \
-    && unzip /tmp/chromedriver_linux64.zip -d /tmp/ \
-    && mv /tmp/chromedriver /usr/local/bin/chromedriver \
-    && chmod +x /usr/local/bin/chromedriver
-
-# Copy all the application files
-COPY . .
-
-# Expose port 8000
+# Make port 8000 available to the world outside this container
 EXPOSE 8000
 
-# Command to run the FastAPI application
-CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8000"]
+# Run the FastAPI app with Uvicorn
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
